--- a/b_boot_jpa/src/main/resources/application.properties
+++ b/b_boot_jpa/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=boot
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
