[이규원] spring 종료

--- a/d_boot_toy/src/main/resources/application.properties
+++ b/d_boot_toy/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.devtools.restart.enabled=true
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.password=1234
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=boot
+spring.datasource.username=boottoy
 
 #JPA
 spring.jpa.show-sql=true
@@ -26,8 +26,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #MAIL
 spring.mail.host=smtp.gmail.com
-spring.mail.password=1234
-spring.mail.username=azimemory@gmail.com
+spring.mail.password=1q2w3e4r1!
+spring.mail.username=pclassgyu@gmail.com
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
